--- a/README
+++ b/README
@@ -1,20 +1,6 @@
 Requirements:
 
-- automake, autoconf, libtool
-	(not needed when compiling a release)
-- pkg-config (http://www.freedesktop.org/wiki/Software/pkg-config)
-	(not needed when compiling a release using the included isl and pet)
-- gmp (http://gmplib.org/)
-- libyaml (http://pyyaml.org/wiki/LibYAML)
-	(only needed if you want to compile the pet executable)
-- LLVM/clang libraries, 2.9 or higher (http://clang.llvm.org/get_started.html)
-	Unless you have some other reasons for wanting to use the svn version,
-	it is best to install the latest release (3.8).
-	For more details, see pet/README.
-
-If you are installing on Ubuntu, then you can install the following packages:
-
-Citing
+To know more about this project contact: cs15mtech11015@iith.ac.in
 
 If you use PPCG for your research, you are invited to cite
 the following paper.
